--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -152,7 +152,7 @@
           });
         }).catch(e => console.log(e));
       }
-      window.setInterval(updatePings, 1000);
+      window.setInterval(updatePings, 1000*5);
       updatePings();
     };
   </script>
